<resources>
    <string name="app_name">SFIS</string>
    <string name="rc_search">RC Search</string>
    <string name="check_nchallans">Check \nChallans</string>
    <string name="rc_nsearch">RC \nSearch</string>
    <string name="car_ninsurance">Car\nInsurance</string>
    <string name="bike_ninsurance">Bike\n Insurance</string>
    <string name="rc_nsearchh">RC \nSearch</string>
    <string name="services">Services</string>
    <string name="nandha">Nandha</string>
    <string name="hello">Hello</string>
    <string name="rc_services">RC Services</string>
    <string name="check_ninsurance">Check\ninsurance</string>
    <string name="check_nfastag">Check \nFastag</string>
    <string name="vahan_nservices">Vahan\nServices</string>
    <string name="analytics">Analytics</string>
    <string name="fasttag">Fasttag</string>
    <string name="nearby_places">Nearby Places</string>
    <string name="petrol_npump">Petrol\nPump</string>
    <string name="mechanic">Mechanic</string>
    <string name="car_nwash">Car \nWash</string>
    <string name="rto_noffice">RTO\nOffice</string>
    <string name="financial_services">Financial Services</string>
    <string name="apply_loan">Apply Loan</string>
    <string name="rc_details">RC Details</string>
    <string name="my_diary">My Diary</string>
    <string name="active_28">Active (28)</string>
    <string name="expired_18">Expired (18)</string>
    <string name="_11th_feb_2023">11th Feb 2023</string>
    <string name="tn_50_nb_7012_suzuki_india_ltd">TN 50 NB 7012 * Suzuki India Ltd</string>
    <string name="expiring_soon_add_a_reminder">Expiring soon. Add a reminder</string>
    <string name="_13th_feb_2023">13th Feb 2023</string>
    <string name="expiring_in_50_days">Expiring in 50 days</string>
    <string name="expiring_in_11_days">Expiring in 11 days</string>
    <string name="we_will_remind_you_on_12th_feb_2023">We will remind you on 12th feb 2023</string>
    <string name="share_your_referral_code_with_a_friend">Share your referral code with a friend</string>
    <string name="copy">Copy</string>
    <string name="referral">Referral</string>
</resources>