<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".MyDairy">

    <ImageView
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:src="@drawable/ic_backbtn"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/urbanistblack"
        android:gravity="center_horizontal"
        android:text="@string/my_diary"
        android:textColor="@color/textcolor"
        android:textSize="@dimen/_16sdp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_25sdp"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/active_28"
            android:textColor="@color/textcolor"
            android:textSize="@dimen/_15sdp"
            android:fontFamily="@font/urbansemibold"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expired_18"
            android:layout_marginLeft="@dimen/_60sdp"
            android:textSize="@dimen/_15sdp"
            android:fontFamily="@font/urbansemibold"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
        <View
            android:layout_width="@dimen/_120sdp"
            android:layout_marginLeft="@dimen/_35sdp"
            android:layout_height="@dimen/_2sdp"
            android:background="@color/textcolor"/>
        <View
            android:layout_width="@dimen/_120sdp"
            android:layout_marginRight="@dimen/_30sdp"
            android:layout_height="@dimen/_2sdp"
            android:background="@color/viewcolorlight"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_editbg"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_25sdp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Search by name or reg. no"
            android:textSize="@dimen/_13sdp"
            android:background="@null"
            android:layout_marginHorizontal="@dimen/_10sdp"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_11th_feb_2023"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_30sdp"
        android:textSize="@dimen/_13sdp"
        android:fontFamily="@font/urbansemibold"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_mydairyvi"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_10sdp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="9sp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tn_50_nb_7012_suzuki_india_ltd"
                android:layout_marginLeft="@dimen/_10sdp"
                android:textSize="@dimen/_10sdp"
                android:fontFamily="@font/urbansemibold"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:gravity="end">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:src="@drawable/whatsaap"
                    />
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:text="Nandha Kumar"
            android:textColor="@color/textcolor"
            android:textSize="@dimen/_14sdp"
            android:fontFamily="@font/urbansemibold"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_2sdp"
            android:background="@color/textcolor"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:layout_width="@dimen/_110sdp"
                android:layout_height="@dimen/_40sdp"
                app:cornerRadius="@dimen/_15sdp"
                android:backgroundTint="@color/viewcolorlight"
                android:text="Expiring in 11 days"
                android:textSize="@dimen/_9sdp"
                android:textAllCaps="false"
                android:fontFamily="@font/urbansemibold"
                android:textColor="@color/textcolor"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="@dimen/_110sdp"
                android:layout_height="@dimen/_40sdp"
                app:cornerRadius="@dimen/_15sdp"
                android:backgroundTint="@color/textcolor"
                android:text="Create Lead"
                android:layout_marginLeft="@dimen/_15sdp"
                android:textSize="@dimen/_10sdp"
                android:textAllCaps="false"
                android:fontFamily="@font/urbansemibold"
                android:textColor="@color/white"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content"
                android:src="@drawable/alarm"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expiring_soon_add_a_reminder"
                android:layout_marginLeft="@dimen/_10sdp"
                android:textSize="@dimen/_11sdp"
                android:fontFamily="@font/urbansemibold"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:gravity="end">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:src="@drawable/add"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_13th_feb_2023"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_30sdp"
        android:textSize="@dimen/_13sdp"
        android:fontFamily="@font/urbansemibold"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_mydairyvi"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_10sdp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tn_50_nb_7012_suzuki_india_ltd"
                android:layout_marginLeft="@dimen/_10sdp"
                android:textSize="@dimen/_11sdp"
                android:fontFamily="@font/urbansemibold"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:gravity="end">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:src="@drawable/whatsaap"
                    />
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:text="Nandha Kumar"
            android:textColor="@color/textcolor"
            android:textSize="@dimen/_14sdp"
            android:fontFamily="@font/urbansemibold"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_2sdp"
            android:background="@color/textcolor"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:layout_width="@dimen/_110sdp"
                android:layout_height="@dimen/_40sdp"
                app:cornerRadius="@dimen/_15sdp"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:text="@string/expiring_in_50_days"
                android:textSize="@dimen/_9sdp"
                android:textAllCaps="false"
                android:fontFamily="@font/urbansemibold"
                android:textColor="@color/textcolor"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="@dimen/_110sdp"
                android:layout_height="@dimen/_40sdp"
                app:cornerRadius="@dimen/_15sdp"
                android:backgroundTint="@color/textcolor"
                android:text="Create Lead"
                android:layout_marginLeft="@dimen/_15sdp"
                android:textSize="@dimen/_9sdp"
                android:textAllCaps="false"
                android:fontFamily="@font/urbansemibold"
                android:textColor="@color/white"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content"
                android:src="@drawable/alarm"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/we_will_remind_you_on_12th_feb_2023"
                android:layout_marginLeft="@dimen/_10sdp"
                android:textSize="@dimen/_11sdp"
                android:fontFamily="@font/urbansemibold"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:gravity="end">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_10sdp"
                android:src="@drawable/pencil"
             />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
    <com.google.android.material.button.MaterialButton
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_45sdp"
        app:cornerRadius="@dimen/_15sdp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_5sdp"
        android:textAllCaps="false"
        android:backgroundTint="@color/textcolor"
        android:text="Add New Vehicle"
        android:textSize="@dimen/_10sdp"
        android:fontFamily="@font/urbansemibold"
        android:textColor="@color/white"/>
</LinearLayout>